Fix vertical alignment of icons

--- a/.config/eww/eww.scss
+++ b/.config/eww/eww.scss
@@ -9,32 +9,43 @@ $orange: #Fa951a;
 
 * {
   all: unset;
-  font-family: "MesloLGM Nerd Font", "MesloLGS Nerd Font", "Source Code Pro", Roboto;
+  font-family: "MesloLGSDZ Nerd Font", "Source Code Pro", Roboto;
 }
 
 .field {
   background-color: $bg0;
-  padding: 0 10px 0 10px;
+  padding: 24px 8px;
   border-radius: $borderR;
 }
 
 .stat-container {
-  padding: 0 16px 0 16px;
+  padding: 6px 16px 6px 14px;
   margin: 6px 6px 6px 6px;
 
   .label {
-    font-size: 24px;
+    font-size: 20px;
     color: $green;
     padding-right: 8px;
   }
+}
 
-  .value {
-    font-size: 14px;
+.multi-stat-container {
+  padding: 0 16px 0px 16px;
+  margin: 6px 6px 6px 6px;
+
+  .label {
+    font-size: 20px;
+    color: $green;
+    padding-right: 10px;
   }
 }
 
-.normal {
+.smaller {
   font-size: 14px;
+}
+
+.normal {
+  font-size: 16px;
 }
 
 .large {
@@ -64,7 +75,7 @@ $orange: #Fa951a;
 .music-showcase {
   background-color: $bg0;
   padding: 10px;
-  border-radius: 12px; // Should match ~/.config/picom/picom.conf border radius
+  border-radius: 12px; // Should match radius in ~/.config/picom/picom.conf
 
   .music-cover {
     border-radius: 12px;
